# web2rust

backend/: Cargo.toml
backend/src/: main.rs
frontendRust/: index.html  package.json
frontendRust/src/: App.tsx
go-backend/: main.go
